test/arrays/views/localSlice/domainLocalSlice.chpl

proc main() {
  var D = {1..10};
  writeln(D[local]);
}
